// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render correctly 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-block;
  font-size: 1.2rem;
  background-color: #294885;
  color: white;
  margin-top: 0.2rem;
  padding: 0.6rem 1.2rem;
  border-radius: 10px;
  box-shadow: 0 0 0 #999;
  -webkit-transition: box-shadow 300ms;
  transition: box-shadow 300ms;
}

<a
  className="emotion-0"
  href="http://www.somewhere.com"
  rel="noreferrer noopener"
  target="_blank"
>
  Link somewhere
</a>
`;

exports[`Button component should render correctly with custom class 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-block;
  font-size: 1.2rem;
  background-color: #294885;
  color: white;
  margin-top: 0.2rem;
  padding: 0.6rem 1.2rem;
  border-radius: 10px;
  box-shadow: 0 0 0 #999;
  -webkit-transition: box-shadow 300ms;
  transition: box-shadow 300ms;
}

<a
  className="myClassName emotion-0"
  href="http://www.somewhere.com"
  rel="noreferrer noopener"
  target="_blank"
>
  Link somewhere
</a>
`;

exports[`Button component should render correctly with target self 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-block;
  font-size: 1.2rem;
  background-color: #294885;
  color: white;
  margin-top: 0.2rem;
  padding: 0.6rem 1.2rem;
  border-radius: 10px;
  box-shadow: 0 0 0 #999;
  -webkit-transition: box-shadow 300ms;
  transition: box-shadow 300ms;
}

<a
  className="emotion-0"
  href="http://www.somewhere.com"
>
  Link somewhere
</a>
`;

exports[`Button component should render correctly with title 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-block;
  font-size: 1.2rem;
  background-color: #294885;
  color: white;
  margin-top: 0.2rem;
  padding: 0.6rem 1.2rem;
  border-radius: 10px;
  box-shadow: 0 0 0 #999;
  -webkit-transition: box-shadow 300ms;
  transition: box-shadow 300ms;
}

<a
  className="emotion-0"
  href="http://www.somewhere.com"
  rel="noreferrer noopener"
  target="_blank"
  title="myTitle"
>
  Link somewhere
</a>
`;
